# napari-epyseg

./: README.md  setup.cfg
src/napari_epyseg/: start_epyseg.py
