[metadata]
name = napari-epyseg 
version = 0.0.1
description = Napari plugin to segment epithelia with EpySeg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.pasteur.fr/gletort/napari-epyseg
author = Gaëlle Letort
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

project_urls =
    Bug Tracker = https://gitlab.pasteur.fr/gletort/epicure/issues
    Documentation = https://gitlab.pasteur.fr/gletort/epicure#README.md
    Source Code = https://gitlab.pasteur.fr/gletort/epicure
    User Support = https://gitlab.pasteur.fr/gletort/epicure/issues

[options]
packages = find:
install_requires =
	epyseg
	napari <= 0.4.19
    numpy
    magicgui
	tifffile <= 2021.11.2
	pillow
	tempfile

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-epyseg = napari_epyseg:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
